Two person DataStorage

--- a/static/index.html
+++ b/static/index.html
@@ -50,6 +50,10 @@
         <button id="startGame_button" class="button start_game" style="display: block;"
             onclick="toggleGameState()"></button>
         <br /> <button onclick="location.href= './trace.html'">Trace</button>
+        <input type="radio" id="rdbtn1" name="identifier" value="1" checked>
+        <label for="rdbtn1">Person1</label><br>
+        <input type="radio" id="rdbtn2" name="identifier" value="2">
+        <label for="rdbtn2">Person2</label><br>
     </div>
     
     <script src="./main.js"></script>
